<resources>
    <!-- Settings -->
    <string name="app_name">Wordly</string>
    <string name="ADMOB_APP_ID" translatable="false">ca-app-pub-2106508532272950~9719013700</string>
    <string name="INTERSTITIAL_START_AD_ID">ca-app-pub-2106508532272950/3452100204</string>
    <string name="INTERSTITIAL_END_AD_ID">ca-app-pub-2106508532272950/3452100204</string>
    <string name="BANNER_HOME_AD_ID">ca-app-pub-3940256099942544/6300978111</string>
    <string name="BANNER_GAME_AD_ID">ca-app-pub-3940256099942544/6300978111</string>
    <string name="REWARDED_REWIND_AD_ID">ca-app-pub-3940256099942544/5224354917</string>

    <!-- Notifications -->
    <string name="notification_title">Wordly New Word</string>
    <string name="notification_content">A new word is generated, check the new word now!</string>

    <!-- Home -->
    <string name="home_title">Choose a Mode!</string>
    <string name="normal_mode">Normal Mode</string>
    <string name="continue_mode">Continue Mode</string>
    <string name="new_mode">New Mode</string>

    <!-- New Mode -->
    <string name="mode_hours">%1$d Hours</string>
    <string name="mode_letters">%1$d Letters</string>
    <string name="create_mode_title">Create New Mode</string>
    <string name="create_mode">Create Mode</string>

    <!-- Statistics -->
    <string name="statistics">Statistics</string>
    <string name="played">Played</string>
    <string name="wins">Wins</string>
    <string name="wins_percentage">%1$s</string>
    <string name="next_game_timer">Next Wordly</string>
    <string name="timer">%1$s:%2$s:%3$s</string>
    <string name="current_streak">Current\nStreak</string>
    <string name="max_streak">Max\nStreak</string>
    <string name="share">Share</string>
    <string name="score_share_msg">Your score is Copied!</string>
    <!-- Share -->
    <string name="share_app_message">Check This App Out</string>
    <string name="email_client">There is no email client installed.</string>


    <!-- No Connection -->
    <string name="retry_text">Retry</string>
    <string name="no_internet_text">It seems like there\'s no internet connection :(</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="rate_us">Rate Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_using">Share Using</string>
    <string name="share_message">Check this app.</string>
    <string name="last_score">This is my last score:</string>
    <string name="send_email">Send mail…</string>

    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="instructions_title">Instructions</string>
    <string name="ok">OK!</string>
    <string name="last_word">Last Word :</string>
    <string name="rewind_error">You Can\'t Rewind Now</string>
    <string name="cant_rewind">Can\'t Rewind</string>
    <string name="rewind">Rewind</string>
    <string name="rewind_question">Do you want to rewind your last try and benefit from another chance?, Watch the add to benefit from the rewind.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="no_rewind_won">You won, no need for the Rewind</string>
    <string name="no_rewind_lost">Game Over, you can\'t benefit from a Rewind now.</string>
    <string name="rewind_benefited">You already benefited from the Rewind :(</string>
    <string name="no_rewind_empty">There\'s no tries to rewind.</string>
    <string name="start_over">Start another Game</string>
    <string name="got_it">Got It</string>
</resources>