<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/backgroundColor"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:src="@drawable/close"
            app:layout_constraintBottom_toBottomOf="@id/statistics_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/statistics_text"
            app:tint="@color/iconColor" />

        <TextView
            android:id="@+id/statistics_text"
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/statistics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/played"
            style="@style/StatsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/wins"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/statistics_text"
            tools:text="13" />

        <TextView
            android:id="@+id/played_text"
            style="@style/Stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/played"
            app:layout_constraintEnd_toEndOf="@id/played"
            app:layout_constraintStart_toStartOf="@id/played"
            app:layout_constraintTop_toBottomOf="@id/played" />

        <TextView
            android:id="@+id/wins"
            style="@style/StatsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/played"
            app:layout_constraintEnd_toStartOf="@+id/streak"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/played"
            app:layout_constraintTop_toTopOf="@id/played"
            tools:text="0%" />

        <TextView
            android:id="@+id/wins_text"
            style="@style/Stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wins"
            app:layout_constraintEnd_toEndOf="@id/wins"
            app:layout_constraintStart_toStartOf="@id/wins"
            app:layout_constraintTop_toBottomOf="@id/wins" />

        <TextView
            android:id="@+id/streak"
            style="@style/StatsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/played"
            app:layout_constraintEnd_toStartOf="@+id/max_streak"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/wins"
            app:layout_constraintTop_toTopOf="@id/played"
            tools:text="0" />

        <TextView
            android:id="@+id/streak_text"
            style="@style/Stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_streak"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/streak"
            app:layout_constraintStart_toStartOf="@id/streak"
            app:layout_constraintTop_toBottomOf="@id/streak" />

        <TextView
            android:id="@+id/max_streak"
            style="@style/StatsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/played"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/streak"
            app:layout_constraintTop_toTopOf="@id/played"
            tools:text="10" />

        <TextView
            android:id="@+id/max_streak_text"
            style="@style/Stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_streak"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/max_streak"
            app:layout_constraintStart_toStartOf="@id/max_streak"
            app:layout_constraintTop_toBottomOf="@id/max_streak" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="max_streak_text, played_text, streak_text, wins_text" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/word_timer_text"
            style="@style/StatsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/next_game_timer"
            android:textSize="@dimen/section_title"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier" />

        <TextView
            android:id="@+id/word_timer"
            style="@style/Stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:textSize="@dimen/timer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/word_timer_text"
            app:layout_constraintStart_toStartOf="@id/word_timer_text"
            app:layout_constraintTop_toBottomOf="@id/word_timer_text"
            tools:text="22:00:00" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/share"
            app:layout_constraintBottom_toBottomOf="@id/word_timer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/word_timer_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>